Admin demo working

--- a/examples/tutorial/flaskr/templates/auth/register.html
+++ b/examples/tutorial/flaskr/templates/auth/register.html
@@ -6,6 +6,8 @@
 
 {% block content %}
   <form method="post">
+    <label for="admin">Type</label>
+    <input name="admin" id="type">
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
