Add select for admin in form

--- a/examples/tutorial/flaskr/templates/auth/register.html
+++ b/examples/tutorial/flaskr/templates/auth/register.html
@@ -8,6 +8,11 @@
   <form method="post">
     <label for="admin">Type</label>
     <input name="admin" id="type">
+    <label for="type_user">Type of User <span style="color: red">*</span></label>
+    <select name="type_user" id="type_user" required>
+      <option value="0">Admin</option>
+      <option value="1">User</option>
+    </select>
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
